--- a/index.html
+++ b/index.html
@@ -1028,65 +1028,85 @@
         </div>
     </section>
 
-    <!-- Team Section -->
-    <section id="team" class="team">
-        <div class="container">
-            <h2 class="section-title animate-on-scroll">Our Team</h2>
-            <p class="section-subtitle animate-on-scroll">Dedicated individuals working together for a common cause</p>
-            <div class="team-grid">
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">AH</div>
-                    <div class="member-name">Ahmed Hassan</div>
-                    <div class="member-role">Director & Founder</div>
+<!-- Team Section -->
+<section id="team" class="team">
+    <div class="container">
+        <h2 class="section-title animate-on-scroll">Our Team</h2>
+        <p class="section-subtitle animate-on-scroll">Dedicated individuals working together for a common cause</p>
+        <div class="team-grid">
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/muaz-khan.jpg" alt="Muaz Khan" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">SK</div>
-                    <div class="member-name">Sarah Khan</div>
-                    <div class="member-role">Operations Manager</div>
+                <div class="member-name">Muaz Khan</div>
+                <div class="member-role"></div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/sarah-khan.jpg" alt="Sarah Khan" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">MR</div>
-                    <div class="member-name">Mohammed Rahman</div>
-                    <div class="member-role">Field Coordinator</div>
+                <div class="member-name">Sarah Khan</div>
+                <div class="member-role">Operations Manager</div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/mohammed-rahman.jpg" alt="Mohammed Rahman" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">FN</div>
-                    <div class="member-name">Fatima Nour</div>
-                    <div class="member-role">Logistics Coordinator</div>
+                <div class="member-name">Mohammed Rahman</div>
+                <div class="member-role">Field Coordinator</div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/fatima-nour.jpg" alt="Fatima Nour" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">OS</div>
-                    <div class="member-name">Omar Salam</div>
-                    <div class="member-role">Community Liaison</div>
+                <div class="member-name">Fatima Nour</div>
+                <div class="member-role">Logistics Coordinator</div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/omar-salam.jpg" alt="Omar Salam" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">LT</div>
-                    <div class="member-name">Layla Taha</div>
-                    <div class="member-role">Program Coordinator</div>
+                <div class="member-name">Omar Salam</div>
+                <div class="member-role">Community Liaison</div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/layla-taha.jpg" alt="Layla Taha" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">YA</div>
-                    <div class="member-name">Yusuf Ali</div>
-                    <div class="member-role">Distribution Manager</div>
+                <div class="member-name">Layla Taha</div>
+                <div class="member-role">Program Coordinator</div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/yusuf-ali.jpg" alt="Yusuf Ali" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">ZM</div>
-                    <div class="member-name">Zara Malik</div>
-                    <div class="member-role">Volunteer Coordinator</div>
+                <div class="member-name">Yusuf Ali</div>
+                <div class="member-role">Distribution Manager</div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/zara-malik.jpg" alt="Zara Malik" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">KF</div>
-                    <div class="member-name">Khalil Farouk</div>
-                    <div class="member-role">Finance Manager</div>
+                <div class="member-name">Zara Malik</div>
+                <div class="member-role">Volunteer Coordinator</div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/khalil-farouk.jpg" alt="Khalil Farouk" class="avatar-image">
                 </div>
-                <div class="team-member animate-on-scroll">
-                    <div class="member-avatar">NS</div>
-                    <div class="member-name">Nadia Sharif</div>
-                    <div class="member-role">Communications Lead</div>
+                <div class="member-name">Khalil Farouk</div>
+                <div class="member-role">Finance Manager</div>
+            </div>
+            <div class="team-member animate-on-scroll">
+                <div class="member-avatar">
+                    <img src="images/nadia-sharif.jpg" alt="Nadia Sharif" class="avatar-image">
                 </div>
+                <div class="member-name">Nadia Sharif</div>
+                <div class="member-role">Communications Lead</div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Case Studies Section -->
     <section id="cases" class="case-studies">
