--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
             <div class="shape"></div>
         </div>
         <div class="hero-content">
-            <h1>Helping Hands</h1>
+            <h1>Helping Hands Bhopal</h1>
             <p>Bringing hope through food aid to Gaza families in their time of greatest need</p>
             <a href="#donate" class="cta-button">Make a Difference Today ➤</a>
         </div>
@@ -966,15 +966,17 @@
             <p class="section-subtitle animate-on-scroll">Dedicated to providing essential food aid to families in Gaza</p>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Helping Hands is a humanitarian organization committed to alleviating hunger and providing essential food assistance to families in Gaza. Founded on principles of compassion and solidarity, we work tirelessly to ensure that no family goes without basic nutrition during these challenging times.</p>
+                    <p>Helping Hands is bhopal based humanitarian organization committed to alleviating hunger and providing essential food assistance to families in Gaza. Founded on principles of compassion and solidarity, we work tirelessly to ensure that no family goes without basic nutrition during these challenging times.</p>
                     <p>Our mission is simple yet profound: to deliver life-sustaining food aid directly to those who need it most. Through our network of local partners and volunteers, we identify families in critical need and provide them with nutritious food packages that can sustain them for weeks.</p>
                     <p>Every donation, every package, and every meal represents hope. We believe that in our shared humanity, no one should face hunger alone, and that together, we can make a meaningful difference in the lives of Gaza's most vulnerable families.</p>
                 </div>
                 <div class="about-visual animate-on-scroll">
-                    <div class="about-visual-content">
-                        <h3>Food Aid Distribution</h3>
-                        <p>Direct relief to families in need</p>
-                    </div>
+    <img src="images/food-aid.jpg" alt="Food Aid Distribution" class="about-visual-image">
+    <div class="about-visual-content">
+        <h3>Food Aid Distribution</h3>
+        <p>Direct relief to families in need</p>
+    </div>
+</div>
                 </div>
             </div>
         </div>
