--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                     <p>Every donation, every package, and every meal represents hope. We believe that in our shared humanity, no one should face hunger alone, and that together, we can make a meaningful difference in the lives of Gaza's most vulnerable families.</p>
                 </div>
                 <div class="about-visual animate-on-scroll">
-    <img src="images/food-aid.jpg" alt="Food Aid Distribution" class="about-visual-image">
+    <img src="Img1.jpg" alt="Food Aid Distribution" class="about-visual-image">
     <div class="about-visual-content">
         <h3>Food Aid Distribution</h3>
         <p>Direct relief to families in need</p>
@@ -1011,19 +1011,19 @@
             <p class="section-subtitle animate-on-scroll">Measuring hope in meals delivered and families supported</p>
             <div class="stats-grid">
                 <div class="stat-item animate-on-scroll">
-                    <span class="stat-number" data-target="15000">0</span>
+                    <span class="stat-number" data-target="150">0</span>
                     <span class="stat-label">Meals Delivered</span>
                 </div>
                 <div class="stat-item animate-on-scroll">
-                    <span class="stat-number" data-target="2500">0</span>
+                    <span class="stat-number" data-target="50">0</span>
                     <span class="stat-label">Families Supported</span>
                 </div>
                 <div class="stat-item animate-on-scroll">
-                    <span class="stat-number" data-target="8000">0</span>
+                    <span class="stat-number" data-target="500">0</span>
                     <span class="stat-label">Children Fed</span>
                 </div>
                 <div class="stat-item animate-on-scroll">
-                    <span class="stat-number" data-target="50">0</span>
+                    <span class="stat-number" data-target="5">0</span>
                     <span class="stat-label">Communities Reached</span>
                 </div>
             </div>
@@ -1041,56 +1041,56 @@
                     <img src="images/muaz-khan.jpg" alt="Muaz Khan" class="avatar-image">
                 </div>
                 <div class="member-name">Muaz Khan</div>
-                <div class="member-role"></div>
+                <div class="member-role">Senior Partner</div>
             </div>
             <div class="team-member animate-on-scroll">
                 <div class="member-avatar">
-                    <img src="images/sarah-khan.jpg" alt="Sarah Khan" class="avatar-image">
+                    <img src="images/waris-hasan.jpg" alt="Waris Hasan" class="avatar-image">
                 </div>
-                <div class="member-name">Sarah Khan</div>
-                <div class="member-role">Operations Manager</div>
+                <div class="member-name">Waris Hasan</div>
+                <div class="member-role">Senior Partner</div>
             </div>
             <div class="team-member animate-on-scroll">
                 <div class="member-avatar">
-                    <img src="images/mohammed-rahman.jpg" alt="Mohammed Rahman" class="avatar-image">
+                    <img src="images/subhana-khan.jpg" alt="Subhana Khan" class="avatar-image">
                 </div>
-                <div class="member-name">Mohammed Rahman</div>
-                <div class="member-role">Field Coordinator</div>
+                <div class="member-name">Subhana Khan</div>
+                <div class="member-role">Managing Partner</div>
             </div>
             <div class="team-member animate-on-scroll">
                 <div class="member-avatar">
-                    <img src="images/fatima-nour.jpg" alt="Fatima Nour" class="avatar-image">
+                    <img src="images/Sadiya-Idrees.jpg" alt="Sadiya Idrees" class="avatar-image">
                 </div>
-                <div class="member-name">Fatima Nour</div>
-                <div class="member-role">Logistics Coordinator</div>
+                <div class="member-name">Sadiya Idrees</div>
+                <div class="member-role">Senior Partner</div>
             </div>
             <div class="team-member animate-on-scroll">
                 <div class="member-avatar">
-                    <img src="images/omar-salam.jpg" alt="Omar Salam" class="avatar-image">
+                    <img src="images/omar-salam.jpg" alt="Shayan Ahmad" class="avatar-image">
                 </div>
-                <div class="member-name">Omar Salam</div>
-                <div class="member-role">Community Liaison</div>
+                <div class="member-name">Shayan Ahmad</div>
+                <div class="member-role">Senior Partner</div>
             </div>
             <div class="team-member animate-on-scroll">
                 <div class="member-avatar">
-                    <img src="images/layla-taha.jpg" alt="Layla Taha" class="avatar-image">
+                    <img src="images/layla-taha.jpg" alt="Zainad Hameed" class="avatar-image">
                 </div>
-                <div class="member-name">Layla Taha</div>
-                <div class="member-role">Program Coordinator</div>
+                <div class="member-name">Zainab Hameed</div>
+                <div class="member-role">Senior Partner</div>
             </div>
-            <div class="team-member animate-on-scroll">
+<!--             <div class="team-member animate-on-scroll">
                 <div class="member-avatar">
-                    <img src="images/yusuf-ali.jpg" alt="Yusuf Ali" class="avatar-image">
+                    <img src="images/yusuf-ali.jpg" alt="hhhh" class="avatar-image">
                 </div>
                 <div class="member-name">Yusuf Ali</div>
-                <div class="member-role">Distribution Manager</div>
+                <div class="member-role">Senior Partner</div>
             </div>
             <div class="team-member animate-on-scroll">
                 <div class="member-avatar">
                     <img src="images/zara-malik.jpg" alt="Zara Malik" class="avatar-image">
                 </div>
                 <div class="member-name">Zara Malik</div>
-                <div class="member-role">Volunteer Coordinator</div>
+                <div class="member-role">Senior Partner</div>
             </div>
             <div class="team-member animate-on-scroll">
                 <div class="member-avatar">
@@ -1106,7 +1106,7 @@
                 <div class="member-name">Nadia Sharif</div>
                 <div class="member-role">Communications Lead</div>
             </div>
-        </div>
+        </div> -->
     </div>
 </section>
 
